test: ignore unknown PD key field
Ensures Zeebe exporters for ES/OS ignore the unknown new property "processDefinitionKey" in 8.8 only.